# docs/swagger.json
@@ -437,6 +437,11 @@
         },
         "/roles/adduserrole": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Adds a role to a user and returns the user's updated list of roles.",
                 "produces": [
                     "application/json"
@@ -448,6 +453,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "User ID",
                         "name": "user_id",
                         "in": "query",
@@ -455,6 +461,7 @@
                     },
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "Role ID",
                         "name": "role_id",
                         "in": "query",
@@ -474,6 +481,18 @@
                             "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "missing_bearer_token | invalid_access_token",
+                        "schema": {
+                            "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "insufficient_role",
+                        "schema": {
+                            "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -485,6 +504,11 @@
         },
         "/roles/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new role with the provided label. Label is normalized to lowercase and trimmed.",
                 "consumes": [
                     "application/json"
@@ -520,6 +544,18 @@
                             "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "missing_bearer_token | invalid_access_token",
+                        "schema": {
+                            "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "insufficient_role",
+                        "schema": {
+                            "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
+                        }
+                    },
                     "409": {
                         "description": "role_already_exists",
                         "schema": {
@@ -548,6 +584,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "Role ID",
                         "name": "id",
                         "in": "query",
@@ -595,6 +632,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "User ID",
                         "name": "id",
                         "in": "query",
@@ -625,6 +663,11 @@
         },
         "/roles/removeuserrole": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Removes a role from a user and returns the user's updated list of roles.",
                 "produces": [
                     "application/json"
@@ -636,6 +679,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "User ID",
                         "name": "user_id",
                         "in": "query",
@@ -643,6 +687,7 @@
                     },
                     {
                         "type": "integer",
+                        "format": "int64",
                         "description": "Role ID",
                         "name": "role_id",
                         "in": "query",
@@ -658,6 +703,18 @@
                     },
                     "400": {
                         "description": "invalid_request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "missing_bearer_token | invalid_access_token",
+                        "schema": {
+                            "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "insufficient_role",
                         "schema": {
                             "$ref": "#/definitions/internal_roles_infra_http.ErrorResponse"
                         }
@@ -976,7 +1033,8 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "label": {
                     "type": "string"
